# abobrinha

./: .gitignore  a  init.sql
todo/: Cargo.toml
todo/src/: domain.rs  filestorage.rs  main.rs  repository.rs  terminal.rs  todo.rs  todocli.rs  todofile.rs  todos.rs
todo/src/controllers/: todo.rs
todo/src/db/: connect.rs
todo/src/domain/: todo.rs  todos.rs
todo/src/filestorage/: error.rs
todo/src/repository/: file_storage.rs  todo.rs
todo/src/repository/file_storage/: error.rs
todo/src/repository/todo/: error.rs
todo/src/terminal/: error.rs
