[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.61"
console = "0.15.2"
factori = "1.1.0"
futures-util = "0.3.26"
http-problem = { version = "0.2.1", features = ["tokio-postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-postgres = { version = "0.7.7", features = ["with-uuid-0_8"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
mockall = "0.11.3"
